syntax = "proto3";

package post_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Georgy27/blogger_api/pkg/proto/post_v1;post_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Blogger API"
    version: "1.0.0"
    contact: {
      name: "Georgy P"
      email: "Aegoraa@yandex.ru"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service PostV1 {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse){
    option (google.api.http) = {
      post: "/v1/posts"
      body: "*"
    };
  };
  rpc UpdatePost(UpdatePostRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/v1/posts/{id}"
      body: "*"
    };
  };
  rpc DeletePost(DeletePostRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/posts/{id}"
    };
  };
  rpc GetPost(GetPostRequest) returns (GetPostResponse){
    option (google.api.http) = {
      get: "/v1/posts/{id}"
    };
  };
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse){
    option (google.api.http) = {
      get: "/v1/posts"
    };
  }
}

message PostInfo {
  string title = 1;
  string content = 2;
  string short_description = 3;
  int64 blog_id = 4;
  string blog_name = 5;
}

message Post {
  int64 id = 1;
  PostInfo info = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message CreatePostRequest {
  string title = 1;
  string short_description = 2;
  string content = 3;
  int64 blog_id = 4;
}

message CreatePostResponse {
 Post post = 1;
}

message UpdatePostRequest {
  int64 id = 1;
  int64 blog_id = 2;
  google.protobuf.StringValue title = 3;
  google.protobuf.StringValue short_description = 4;
  google.protobuf.StringValue content = 5;
}

message DeletePostRequest {
  int64 id = 1;
}

message GetPostRequest {
  int64 id = 1;
}

message GetPostResponse {
  Post post = 1;
}

message ListPostsRequest {
  int64 limit = 1 ;
  int64 offset = 2;
}

message ListPostsResponse {
  repeated Post posts = 1;
  int64 pagesCount = 2;
  int64 page = 3;
  int64 page_size = 4;
  int64 total_count = 5;

}